2002-05-12 Ales Hvezda   <ahvezda@geda.seul.org>

	* acinclude.m4: Removed file from repository

2002-04-08 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Changed the function which is search for libpng.
	This was needed for the win32 port.

2002-04-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in and friends: More work on getting the upgrade of 
	autoconf, automake, and libtool to behave correctly.

	* configure.in: Added PATHSEP variable which holds the proper path
	separater depending on the platform.

	* lib/system-*.in: Work on getting rc files to use above variable.
	
	* noweb/o_text_basic.nw: Changed the name of the lower case symbols
	to include an _ to make systems like win32 (which have semi-case 
	sensitive) file systems happy.

2002-04-01 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/defines.h: Added a #if and a #define for M_PI

	* include/defines.h: Put in #defines for path separater for unix vs
	mingw

	* noweb/o_complex.nw: Used above path separater #defines in a few
	sprintf/u_strdup_multiple

	* noweb/o_text.nw: Used above path separater #defines in a few
	sprintf/u_strdup_multiple

	* noweb/s_log.nw: Used above path separater #defines in a few
	sprintf/u_strdup_multiple

	* noweb/s_page.nw: Used above path separater #defines in a few
	sprintf/u_strdup_multiple

	* noweb/s_clib.nw: Used above path separater #defines in a few
	sprintf/u_strdup_multiple

	* noweb/s_slib.nw: Used above path separater #defines in a few
	sprintf/u_strdup_multiple

	* configure.in and friends: Upgraded to autoconf 2.53, libtool 1.5,
	and automake 1.5.  Lots of changes in various places for this upgrade.

2002-02-24 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in, config.h.in: Added a few checks for some
	non-portable #includes

	* noweb/*.nw: Reworked the #include section to use the above
	checks.

	* configure.in: Added checks for mingw32 and disabled the
	cygwin port
	
2002-02-18 Ales Hvezda   <ahvezda@geda.seul.org>
